# yet_another_tts

./: README.md  pyproject.toml
wyoming_silero/: __init__.py  __main__.py  handler.py  sentence_boundary.py  speech_tts.py
